--- a/styles.css
+++ b/styles.css
@@ -49,7 +49,7 @@ body {
     width: 100%;
 }
 
-#patternButton {
+.btn {
     margin-bottom: 20px;
     padding: 10px 20px;
     font-size: 16px;
@@ -61,6 +61,6 @@ body {
     cursor: pointer;
 }
 
-#patternButton:hover {
+.btn:hover {
     background-color: #0056b3;
 }
